--- a/index1.html
+++ b/index1.html
@@ -25,7 +25,7 @@
                 <a href="./001.HTML/005.Robot.Pj/robot.html"target="_blank">Robot</a>
             </li>
             <li>
-                <a href="./001.HTML/006.CGV_PJ/003.site/index.html"target="_blank">CGV</a>
+                <a href="./001.HTML/006.CGV_PJ/003.site/intro.html"target="_blank">CGV</a>
             </li>
         </ul>
     </h2>
