--- a/003.JS학습/JS001.html
+++ b/003.JS학습/JS001.html
@@ -78,19 +78,95 @@
                 - 호출: 함수명(값)
                     (값은 함수의 변수개수만큼 보냄)
 
+                [ JS의 이벤트란? ]
+                - 브라우저에서 실행되는 입력관련 시점을
+                구분하여 알려주는 요소
 
+                - 이벤트의 종류:
+                1) 마우스관련 이벤트
+                - click, dbclick, mouseover, mouseout,...
+                2) 키보드관련 이벤트
+                - keydown, keyup, keypress,...
+                3) 기타 이벤트
+                - load, focus, blur,...
+                
+                - 이벤트와 함수를 연결하려면
+                html 요소 속성에 이벤트속성이 이미 모두
+                만들어져 있다.
+                이 속성의 값으로 함수를 호출 할 수 있다.
+
+                [ HTML 이벤트 속성 ]
+                - on+이벤트명 = 값
+                예) onmouseover="" / onkeyup="" / onload=""
+
+
+                [ JS에서 따옴표의 의미 ]
+                - 값을 의미(string:문자데이터)
+                - 문자를 따옴표로 안싸면 그거슨 변수라고함
+
+
+                [ JS에서 이퀄의 의미 ]
+                - 이퀄은 오른쪽의 값이 왼쪽에 할당됨을 의미
+                (할당은 값이 변수등에 들어감을 말한다)
+                -> 절대로 같다는 의미가 아님
+
+
+                [ JS에서 점(.)의 의미 ]
+                - 객체의 하위 메서드나 속성으로 들어감을 의미
+                - 객체는 목적을 가지고 만든 프로그램 단위체
+                - 메서드는 객체 내부에 만든 함수(코드집합)
+                - 속성은 객체 내부의 특정값을 정의하는 항목
+
+                예)
+                우주.은하계.태양계.지구.대한민국.서울.강남구.테해란로
+
+
+                [ JS의 코드 마무리는 세미콜론(;) ]
+                - JS의 코드 끝에는 세미콜론으로 마무리한다
+                - 세미콜론이 안붙는 경우 : 선언적함수끝, 제어문끝
+
+
+                (참고: 자동세미콜론 삽입기능
+                    ASI(Automatic Semicolon Insertion)
+                    - 브라우저가 세미콜론을 필요한 부분에
+                    구문분석을 하여 자동으로 세미콜론을
+                    프로그램 실행전에 넣어주는 기능이 있다)
+                    - 주의사항: 편리할 수 있지만 자동 구문분석시
+                    오류 분석이 있을 수 있으므로 개발자가 직접
+                    세미콜론을 넣어주는 것을 추천!
+
+
+                [ JS에서 요소를 선택하는 방법 ]
+                - document 객체 :
+                    html문서 전체를 담고있는 DOM객체
+                - DOM(Document Object Model)
+                : 문서에 있는 각 요소로 접근할 수 있는
+                방법론을 가지는 모델링(인터페이스)
 
         */
 
-        /* 
+        /******************************************* 
                 함수명: showMe
                 기능: .pbox의 디자인을 변경한다
-         */
-                function showMe(){
+         *******************************************/
+        function showMe(){
 
+            // 1. 함수호출확인
+            console.log("나야나아나야나아");
 
-                }////////////////////showMe 함수////////////////////////
-                ////////////////////////////////////////////////////////
+            // 2. html 변경하기
+            // 변경대상: #name
+            // 변경내용: html 이미지넣기
+            document
+            // 현재문서전체
+            .getElementById("name")
+            // 특정아이디요소 가져오기
+            .innerHTML = '<img src="images/kim.png" alt="김비서가 왜그럴까">';
+            // html요소를 넣는 속성
+            // 이퀄 오른쪽의 데이터가 왼쪽으로 들어감(할당!)
+
+        }////////////////////showMe 함수////////////////////////
+        ////////////////////////////////////////////////////////
 
 
     </script>
@@ -111,7 +187,8 @@
     </style>
 </head>
 <body>
-    <p class="pbox" title="여기를 클릭하세요">
+        
+    <p class="pbox" title="여기를 클릭하세요" onclick="showMe()">
         나는 요즘 매일매일 생각한다<br>
         도대체 <span id="name"></span>
     </p>
