--- a/001.HTML/000.T_Pj/2.Lego_PJ/index.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/index.html
@@ -57,18 +57,18 @@
     <main id="cont" class="part rbx">
         <div id="screen">
             <iframe id="ifr"
-                src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=U-zxyUUzzrA&playsinline=1/"
+                src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=duHGU6S9hZk&playsinline=1/"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
         <div id="screen2">
             <iframe id="ifr"
-                src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=U-zxyUUzzrA&playsinline=1/"
+                src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=duHGU6S9hZk&playsinline=1/"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
 
-        <nav class="list">
+        <div class="list">
             <ul>
                 <li>
                     <a href="#" onclick="goMv('2yTr5oS99_c')">
@@ -79,12 +79,12 @@
                         </ol>
                     </a></li>
             </ul>
-        </nav>
+        </div>
     </main>
     <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ메인ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
     <footer id="info" class="part">
         <address>
-            <img src="./img/logo.png" alt="하단레고로고">
+            <a href="#"><img src="./img/logo.png" alt="하단레고로고"></a>
             <span>
                 LEGO System A/S, DK-7190 Billund, Denmark. Must be 18 years or older to purchase online.<br>
                 LEGO, the LEGO logo, the Minifigure, DUPLO, LEGENDS OF CHIMA, NINJAGO, BIONICLE, MINDSTORMS and MIXELS are trademarks
