--- a/index1.html
+++ b/index1.html
@@ -27,6 +27,9 @@
             <li>
                 <a href="./001.HTML/006.CGV_PJ/003.site/intro.html"target="_blank">CGV</a>
             </li>
+            <li>
+                <a href="./001.HTML/009.SliceMove_PJ/lotte.html"target="_blank">LOTTE</a>
+            </li>
         </ul>
     </h2>
 </body>
